# darktide-mod-relay

./: .gitignore  .release-please-config.json  .release-please-manifest.json  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: pr.yml  release-please.yml
docs/architecture/: MOD-RELAY.md  MOD_LOADER-DMF.md  README.md
docs/reference/: README.md
docs/reference/community-tools/: analysis-verification.md  darktide-framework-analysis.md
docs/reference/darktide/: darktide-binary.md
docs/reference/relay/: logging.md
src/: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.ps1
src/discovery/: Cargo.toml
src/discovery/src/: disasm.rs  engine.rs  lib.rs  oracle.rs  patterns.rs  pe.rs  scan.rs
src/discovery/tests/: detail.rs  oracle.rs  pe_synthetic.rs
src/launcher/src/: launcher.c  launcher.h  launcher.rc
src/mod_loader/: class_registry.lua  dmf_adapter.lua  file.lua  init.lua  lifecycle.lua  mod_manager.lua  path.lua  require_bridge.lua
src/mod_loader/tests/: mock.lua  runner.lua  test_class_registry.lua  test_dmf_adapter.lua  test_entry.lua  test_file.lua  test_hot_reload.lua  test_lifecycle.lua  test_loader_hardening.lua  test_lua_logs.lua  test_mod_manager.lua  test_negative.lua  test_path.lua  test_probes.lua  test_require_bridge.lua
src/mod_loader/tests/probes/: README.md
src/mod_loader/tests/probes/failure_injection/framework_boundary/: README.md
src/mod_loader/tests/probes/failure_injection/framework_boundary/mods/: mods.lst
src/mod_loader/tests/probes/failure_injection/framework_boundary/mods/dmf/: dmf.mod
src/mod_loader/tests/probes/failure_injection/framework_boundary/mods/framework_later_probe/: framework_later_probe.mod
src/mod_loader/tests/probes/failure_injection/framework_boundary/mods/framework_prior_probe/: framework_prior_probe.mod
src/mod_loader/tests/probes/failure_injection/standalone/: README.md
src/mod_loader/tests/probes/failure_injection/standalone/mods/: mods.lst
src/mod_loader/tests/probes/failure_injection/standalone/mods/healthy_sibling_probe/: healthy_sibling_probe.mod
src/mod_loader/tests/probes/failure_injection/standalone/mods/standalone_failure_probe/: standalone_failure_probe.mod
src/mod_loader/tests/probes/metadata/crashify/: README.md
src/mod_loader/tests/probes/metadata/crashify/mods/: mods-without-alpha.lst  mods.lst
src/mod_loader/tests/probes/metadata/crashify/mods/crashify_alpha/: crashify_alpha.mod
src/mod_loader/tests/probes/metadata/crashify/mods/crashify_beta/: crashify_beta.mod
src/mod_loader/tests/probes/metadata/crashify/mods/crashify_probe/: crashify_probe.mod
src/mod_loader/tests/probes/observational/lua_logs_probe/: README.md
src/mod_loader/tests/probes/observational/lua_logs_probe/mods/: mods.lst
src/mod_loader/tests/probes/observational/lua_logs_probe/mods/lua_logs_probe/: lua_logs_probe.mod
src/mod_loader/tests/probes/observational/reload_seam_probe/: README.md  reload_seam_probe.mod
src/mod_loader/tests/probes/observational/reload_seam_probe/mods/: mods.lst
src/mod_loader/tests/probes/observational/reload_seam_probe/mods/reload_seam_probe/: reload_seam_probe.mod
src/mod_loader/tests/probes/observational/shutdown_probe/: README.md  shutdown_probe.mod
src/mod_loader/tests/probes/observational/shutdown_probe/mods/: mods.lst
src/mod_loader/tests/probes/observational/shutdown_probe/mods/shutdown_probe/: shutdown_probe.mod
src/mod_loader/tests/probes/shutdown_probe/: shutdown_probe.mod
src/shell/include/: log_sink.h  relay_discovery.h  trampoline.h
src/shell/src/: dllmain.c  log_sink.c  relay_shell.rc  trampoline.c
src/tests/: stub_shell.c  stub_target.c  test_config.c  test_injection.c  test_log_sink.c  test_quoting.c  test_runner.c  test_runner.h  test_steam_env.c  test_trampoline.c
